[package]
name = "peer-discovery-rust"
version = "0.1.0"
authors = ["Povilas Balciunas <povilasb@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7.4", features = ["v4"] }
err-derive = "0.1.5"

[dev-dependencies]
speculate = "0.1.2"
hamcrest2 = "0.2.6"
proptest = "0.9.4"
