[package]
authors = ["Povilas Balciunas <povilasb@protonmail.com>"]
edition = "2018"
name = "peer-discovery"
version = "0.1.0"

[dependencies]
async-std = "*"
err-derive = "0.1.5"
futures-timer = "*"
log = "*"

[dependencies.futures-preview]
version = "=0.3.0-alpha.18"

[dependencies.uuid]
features = ["v4"]
version = "0.7.4"

[dev-dependencies]
hamcrest2 = "0.2.6"
proptest = "0.9.4"
speculate = "0.1.2"
unwrap = "*"
simple_logger = "1.3.0"
