[package]
authors = ["Povilas Balciunas <povilasb@protonmail.com>"]
edition = "2018"
name = "peer-discovery"
version = "0.1.0"

[dependencies]
async-std = "1.0.1"
err-derive = "0.1.5"
futures-timer = "0.4.0"
log = "0.4.8"
unwrap = "1.2.1"

[dependencies.futures]
features = ["thread-pool"]
version = "0.3.1"

[dependencies.uuid]
features = ["v4"]
version = "0.7.4"

[dev-dependencies]
hamcrest2 = "0.3.0"
proptest = "0.9.4"
speculate = "0.1.2"
simple_logger = "1.3.0"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_yaml = "0.8.7"
